service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: docmost
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: docmost
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: docmost
  namespace: docmost
spec:
  selector:
    app: docmost
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
